--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -1,6 +1,6 @@
 stackbitVersion: ~0.4.0
 ssgName: nextjs
-nodeVersion: "14"
+nodeVersion: '14'
 cmsName: git
 publishDir: .next
 dataDir: content/data
@@ -13,5 +13,5 @@ assets:
 contentModels:
   Page:
     isPage: true
-    urlPath: "/{slug}"
-    newFilePath: "{slug}.md"
+    urlPath: '/{slug}'
+    newFilePath: '{slug}.md'
