--- a/package.json
+++ b/package.json
@@ -74,9 +74,10 @@
     "@testing-library/preact-hooks": "^1.1.0",
     "@testing-library/react": "npm:@testing-library/preact@^2.0.1",
     "@testing-library/react-hooks": "npm:@testing-library/preact-hooks@^1.1.0",
+    "@types/chai": "^4.3.0",
     "@types/jest": "27.4.1",
     "@types/js-yaml": "^4.0.5",
-    "@types/lodash": "^4.14.180",
+    "@types/lodash": "^4.14.181",
     "@types/node": "17.0.23",
     "@types/node-fetch": "^2.6.1",
     "@types/nprogress": "^0.2.0",
@@ -87,6 +88,7 @@
     "autoprefixer": "^10.4.4",
     "babel-jest": "27.5.1",
     "babel-loader": "^8.2.4",
+    "chai": "^4.3.6",
     "cypress": "^9.5.3",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "daisyui": "^2.13.6",
