--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,13 +8,17 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2015",
+    "target": "es2017",
     "module": "esnext",
     "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@watheia/molecular.api": ["libs/api/src/index.ts"],
+      "@watheia/molecular.types": ["libs/types/src/index.ts"],
+      "@watheia/molecular.utils": ["libs/utils/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
