feat: UI Factory
This update refactors the ui components into its own standalone module.
It also provides some bug fixes/workarounds to the api, as needed.

--- a/.stackbit/models/FooterConfig.yaml
+++ b/.stackbit/models/FooterConfig.yaml
@@ -1,7 +1,7 @@
 type: object
 name: FooterConfig
 label: Footer Config
-labelField: body
+labelField: copyright
 fields:
   - type: markdown
     name: copyright
