--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -1,13 +1,13 @@
 stackbitVersion: ~0.4.0
 ssgName: nextjs
-nodeVersion: '14'
+nodeVersion: '16'
 cmsName: git
 publishDir: .next
 dataDir: content/data
 pagesDir: content/pages
 assets:
   referenceType: static
-  staticDir: public
+  staticDir: apps/home/public
   uploadDir: images
   publicPath: /
 contentModels:
