--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
-    "@nrwl/next": "13.10.0",
+    "@nrwl/next": "13.10.1",
     "@preact/compat": "^17.0.3",
     "@reach/skip-nav": "^0.16.0",
     "@stackbit/annotations": "^0.1.2",
@@ -26,7 +26,7 @@
     "node-fetch": "^3.2.3",
     "nprogress": "^0.2.0",
     "preact": "^10.7.1",
-    "preact-render-to-string": "^5.1.20",
+    "preact-render-to-string": "^5.1.21",
     "preact-ssr-prepass": "^1.2.0",
     "react": "npm:@preact/compat@^17.0.3",
     "react-dom": "npm:@preact/compat@^17.0.3",
@@ -44,27 +44,26 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-angular": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
-    "@cucumber/cucumber": "^7.3.2",
     "@cypress/browserify-preprocessor": "^3.0.2",
     "@jscutlery/semver": "^2.21.6",
     "@next/bundle-analyzer": "^12.1.4",
-    "@nrwl/cli": "13.10.0",
-    "@nrwl/cypress": "13.10.0",
-    "@nrwl/devkit": "^13.10.0",
-    "@nrwl/eslint-plugin-nx": "13.10.0",
-    "@nrwl/jest": "13.10.0",
-    "@nrwl/js": "13.10.0",
-    "@nrwl/linter": "13.10.0",
+    "@nrwl/cli": "13.10.1",
+    "@nrwl/cypress": "13.10.1",
+    "@nrwl/devkit": "^13.10.1",
+    "@nrwl/eslint-plugin-nx": "13.10.1",
+    "@nrwl/jest": "13.10.1",
+    "@nrwl/js": "13.10.1",
+    "@nrwl/linter": "13.10.1",
     "@nrwl/nx-cloud": "^13.2.2",
-    "@nrwl/react": "13.10.0",
-    "@nrwl/tao": "13.10.0",
-    "@nrwl/web": "13.10.0",
-    "@nrwl/workspace": "13.10.0",
+    "@nrwl/react": "13.10.1",
+    "@nrwl/tao": "13.10.1",
+    "@nrwl/web": "13.10.1",
+    "@nrwl/workspace": "13.10.1",
     "@nx-tools/nx-docker": "^2.3.0",
     "@prefresh/babel-plugin": "^0.4.3",
     "@stackbit/cli": "^0.2.11",
     "@swc/cli": "~0.1.57",
-    "@swc/core": "~1.2.164",
+    "@swc/core": "~1.2.165",
     "@swc/helpers": "~0.3.8",
     "@swc/jest": "0.2.20",
     "@tailwindcss/aspect-ratio": "^0.4.0",
@@ -90,12 +89,11 @@
     "babel-loader": "^8.2.4",
     "chai": "^4.3.6",
     "cypress": "^9.5.3",
-    "cypress-cucumber-preprocessor": "^4.3.1",
     "daisyui": "^2.13.6",
     "dependency-cruiser": "^11.4.1",
     "dotenv": "^16.0.0",
-    "eslint": "~8.12.0",
-    "eslint-config-next": "12.1.1-canary.3",
+    "eslint": "~8.13.0",
+    "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
@@ -109,12 +107,12 @@
     "lodash": "^4.17.21",
     "next-compose-plugins": "^2.2.1",
     "next-plugin-preact": "^3.0.6",
-    "next-pwa": "^5.4.7",
-    "nx": "^13.10.0",
+    "next-pwa": "^5.5.0",
+    "nx": "^13.10.1",
     "nx-stylelint": "^13.3.0",
     "postcss": "^8.4.12",
     "postcss-calc": "^8.2.4",
-    "postcss-custom-properties": "12.1.6",
+    "postcss-custom-properties": "12.1.7",
     "postcss-dir-pseudo-class": "^6.0.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-focus-ring": "^1.0.0",
@@ -131,9 +129,6 @@
     "prettier": "^2.6.2",
     "react-test-renderer": "17.0.2",
     "sass": "^1.50.0",
-    "sourcebit": "^0.11.1",
-    "sourcebit-source-filesystem": "^0.2.0",
-    "sourcebit-target-next": "^0.8.1",
     "stylelint": "^14.6.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0",
